# aotmid

./: .dockerignore  .env.example  .gitignore  Dockerfile  Home.py  MANUAL.md  Makefile  README.md  docker-compose.yml  environment.yml  generate_report.py  packages.txt  pyproject.toml  requirements-cloud.txt  requirements.txt
.streamlit/: config.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
cli/: __init__.py  __main__.py  fetch.py  train.py
config/: data_sources.yaml
pages/: 1_Data_Explorer.py  2_EDA.py  3_Correlation.py  4_Social_Network.py  5_Machine_Learning.py  6_Forecast.py  7_Report.py
reports/: AOT_DDAS_Final_Report.docx  AOT_Social_Network_Analysis_Final.docx  AOT_Social_Network_Analysis_Report.docx  AOT_Stock_Network_Report.docx  ~$T_Social_Network_Analysis_Report.docx  ~$T_Stock_Network_Report.docx
src/aot_stock_network/: __init__.py  cli_runner.py  config.py  feature_engineering.py  logging_setup.py  network_analysis.py  prediction.py  preprocessing.py  seed.py  visualization.py
src/aot_stock_network/dashboard/: __init__.py  correlation_page.py  data_explorer_page.py  download_page.py  eda_page.py  forecast_page.py  home_page.py  ml_page.py  report_page.py  social_network_page.py  utils.py
src/aot_stock_network/data/: __init__.py  fetcher.py  loader.py  sources.py  validator.py
tests/: conftest.py  test_data.py  test_feature_engineering.py  test_logging.py  test_network_analysis.py  test_prediction.py  test_preprocessing.py  test_visualization.py
